tests/paczka1/fuzzy1/97880008.err
Error in line 1: 220phI8 S20c cc,9
Error in line 4: S204 S66 74,0
Error in line 5: S204 A762 971,0
Error in line 10: 220phI8 S204 2,27
Error in line 22: 8jjwO9A0s S13 10,20
Error in line 23: 220phI8 S13 51,7
Error in line 26: 220phI8 A762 72,5
Error in line 28: 8jjwO9A0s S66 0,9
Error in line 32: 8jjwO9A0s A762 6,3
Error in line 33: 8jjwO9A0s S13 73,6
Error in line 34: 8jjwO9A0s S66 78,2
